<resources>
    <string name="app_name">FoodBack</string>
    <string name="loading">Welcome</string>
    <string name="logo">Logo</string>
    <string name="establishment_name">Nome de Estabelecimento</string>
    <string name="category">Categoria</string>
    <string name="address">Morada</string>
    <string name="e_mail">E-mail</string>
    <string name="contact">Contacto</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="register_establishment">Registar Estabelecimento</string>
    <string name="restaurant">Restaurante</string>
    <string name="bar">Bar</string>
    <string name="coffe">Café</string>
    <string name="dessert">Sobremesa</string>
    <string name="login">LogIn</string>
    <string name="jump_login">Saltar o login</string>
    <string name="user_name">Nome</string>
    <string name="signup">Registar</string>

    <string name="confpass">Confirmação da palavra-passe</string>
    <string name="newpass">Nova palavra-passe</string>
    <string name="oldpass">Antiga palavra-passe</string>
    <string name="zone">Zona</string>
    <string name="city">Cidade</string>
    <string name="delivery">Entregas ao Domicílio</string>
    <string name="change_estab_info">Alterar</string>
    <string name="premium">Aceder ao Serviço Premium</string>
    <string name="title_activity_user_menu">Menu de Utilizador</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_search">Pesquisa</string>
    <string name="action_settings">Settings</string>
    <string name="homepage">Página Principal</string>
    <string name="feed">Feed</string>
    <string name="definitions">Definições</string>
    <string name="logout">Sair</string>
    <string name="title_activity_establishment_menu">Menu de Estabelecimento</string>
    <string name="estabpage">Página do Estabelecimento</string>
    <string name="title_activity_admin_menu">Menu de Administrador</string>
    <string name="notifications">Notificações</string>
    <string name="coffee">Café</string>
    <string name="tryagain">Tentar Novamente</string>
    <string name="birthdate">Data de Nascimento:</string>
    <string name="price">Preço Médio</string>
    <string name="schedule1">Horário 1</string>
    <string name="schedule2">Horário 2</string>
    <string name="changepass">Alterar palavra-passe</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="reports">Denúncias</string>
    <string name="notices">Notificações dos Estabelecimentos</string>
    <string name="error_unexpected">Unexpected error.</string>
    <string name="error_server_response">Error getting server response.</string>
    <string name="error_no_role">Something unexpected occurred. Please try signing in again.</string>
    <string name="login_success">Login successful!</string>
    <string name="establishment_image">Establishment image</string>
    <string name="discard">Descartar</string>
    <string name="delete_comment">Apagar Comentário</string>
    <string name="correct_estab_changes">Alterar Informações</string>
    <string name="display_price">%d€</string>
    <string name="display_delivery">Encomendas</string>
    <string name="spotlight">Destacar</string>
    <string name="title_activity_visitor_menu">Menu de Visitante</string>
    <string name="visitor">Visitante</string>
    <string name="content_image_nav_header">Content Image</string>
    <string name="admin">Administrador</string>
    <string name="admin_email">admin@foodback.pt</string>
    <string name="register">Registar</string>
    <string name="signin">Entrar</string>
    <string name="promotions">Promoções</string>
    <string name="no_establishments_found">No establishments found.</string>
    <string name="new_promotion">Nova Promoção</string>
    <string name="promotion_title">Título</string>
    <string name="promotion_description">Descrição</string>
    <string name="promotion_code">Código</string>
    <string name="promotion_limit_date">Data de Validade</string>
    <string name="promotion_create">Criar Promoção</string>
    <string name="reports_users">Denúncias a Utilizadores</string>
    <string name="reports_estabs">Denúncias a Estabelecimentos</string>
    <string name="has_delivery">Possui serviço de entregas ao domicílio</string>
    <string name="estab_page_image">Imagem do Estabelecimento</string>
    <string name="report_comment">Denunciar Comentário</string>
    <string name="report_description">Motivo da denúncia</string>
    <string name="report">Denunciar</string>
    <string name="code">Código:</string>
    <string name="limit_date">Data de Validade:</string>
    <string name="report_title">%1$s denunciou %2$s</string>
    <string name="report_content">%1$s: "%2$s"</string>
    <string name="connection_ip">Introduzir &lt;IP&gt;:&lt;PORT&gt;</string>
    <string name="delivery_name">Nome da Encomenda:</string>
    <string name="delivery_quantity">Quantidade:</string>
    <string name="ready">Pronto a entregar</string>
    <string name="add_meal">Adicionar Pedido</string>
    <string name="end_delivery">Finalizar Pedido</string>
    <string name="menu">Menu</string>
    <string name="opinions">Opiniões</string>
    <string name="priceformeal"> / por refeição</string>
    <string name="spotlight_icon">Destaques</string>
    <string name="request1">Pedido 1</string>
    <string name="request2">Pedido 2</string>
    <string name="request3">Pedido 3</string>
    <string name="request4">Pedido 4</string>
    <string name="tracking">Minhas Encomendas</string>
    <string name="state">Estado da Encomenda:</string>
    <string name="cost">Custo do Pedido:</string>
    <string name="total_cost">Custo Total:</string>
    <string name="publicidade">Publicidade</string>
    <string name="sample_francesinhas_title">As melhores Francesinhas do Porto a 5€</string>
    <string name="sample_francesinhas_desc">Venha à Tasca do Zé comer e chorar por mais!! Não vai querer perder o melhor fim de semana de sempre a comer sem dar por ela ;)</string>
    <string name="sample_francesinhas_promo">12345678</string>
    <string name="sample_francesinhas_expiry">21/01/2017</string>
    <string name="sample_cost_cenas">Cenas</string>
    <string name="report_button">Report button</string>

    <string-array name="spotlight_time_options">
        <item>1 dia</item>
        <item>2 dias</item>
        <item>3 dias</item>
        <item>4 dias</item>
        <item>5 dias</item>
        <item>6 dias</item>
        <item>7 dias</item>
        <item>8 dias</item>
        <item>9 dias</item>
        <item>10 dias</item>
        <item>11 dias</item>
        <item>12 dias</item>
        <item>13 dias</item>
        <item>14 dias</item>
        <item>15 dias</item>
    </string-array>

    <string-array name="meal_quantities">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

</resources>
