<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_homepage"
            android:icon="@drawable/ic_home"
            android:title="@string/homepage" />
        <item
            android:id="@+id/nav_spotlights"
            android:icon="@drawable/ic_spotlight"
            android:title="@string/spotlight_icon" />
        <item
            android:id="@+id/nav_estabpage"
            android:icon="@drawable/ic_estabpage"
            android:title="@string/estabpage" />
        <item
            android:id="@+id/nav_delivery"
            android:icon="@drawable/ic_delivery"
            android:title="@string/delivery" />
        <item
            android:id="@+id/nav_promotions"
            android:icon="@drawable/ic_promotions"
            android:title="@string/promotions" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/definitions" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout" />
    </group>

</menu>
