<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    tools:context="com.foodback.foodback.activity.UserRegister">


    <com.google.android.flexbox.FlexboxLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:alignItems="center"
        app:flexDirection="column"
        app:justifyContent="center"
        >

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="200dp"
            android:layout_height="70dp"
            android:layout_marginBottom="40dp"
            android:contentDescription="@string/logo"
            app:layout_alignSelf="center"
            app:srcCompat="@drawable/foodback_logo" />

        <EditText
            android:id="@+id/name"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/user_name"
            android:inputType="text" />

        <EditText
            android:id="@+id/address"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/address"
            android:inputType="text"/>

        <EditText
            android:id="@+id/email"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/e_mail"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/contact"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/contact"
            android:inputType="text" />

        <EditText
            android:id="@+id/username"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:inputType="text"/>

        <EditText
            android:id="@+id/password"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword" />


        <Button
            android:id="@+id/buttonRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:padding="10dp"
            android:background="#f16521"
            android:text="@string/signup"
            android:textColor="#fff"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/estab_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/register_establishment"
            android:clickable="true"/>

    </com.google.android.flexbox.FlexboxLayout>

</android.support.constraint.ConstraintLayout>

