<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/_10sdp"
    tools:context="com.foodback.foodback.activity.UserChangeInfo">


    <com.google.android.flexbox.FlexboxLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:alignItems="center"
        app:flexDirection="column"
        app:justifyContent="center"
        >

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <TableLayout
                android:layout_width="@dimen/_250sdp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:stretchColumns="1">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_width="@dimen/_200sdp"
                    android:layout_height="@dimen/_70sdp"
                    android:layout_marginBottom="@dimen/_20sdp"
                    android:contentDescription="@string/logo"
                    app:layout_alignSelf="center"
                    app:srcCompat="@drawable/foodback_logo" />

                <EditText
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/user_name"
                    android:inputType="text"
                    android:textSize="@dimen/_10sdp" />

                <EditText
                    android:id="@+id/address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/address"
                    android:inputType="text"
                    android:textSize="@dimen/_10sdp" />

                <EditText
                    android:id="@+id/zone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/zone"
                    android:inputType="text"
                    android:textSize="@dimen/_10sdp" />

                <EditText
                    android:id="@+id/city"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/city"
                    android:inputType="text"
                    android:textSize="@dimen/_10sdp" />

                <EditText
                    android:id="@+id/email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/e_mail"
                    android:inputType="textEmailAddress"
                    android:textSize="@dimen/_10sdp" />

                <EditText
                    android:id="@+id/contact"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/contact"
                    android:inputType="text"
                    android:textSize="@dimen/_10sdp" />

                <DatePicker
                    android:id="@+id/birth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleX="0.7"
                    android:scaleY="0.7"
                    android:datePickerMode="spinner" />

                <CheckBox
                    android:id="@+id/premium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/premium"
                    android:textSize="@dimen/_10sdp" />

                <TextView
                    android:layout_marginTop="@dimen/_30sdp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="@string/changepass"
                    android:textStyle="bold"
                    android:textSize="@dimen/_10sdp"/>

                <EditText
                    android:id="@+id/oldpass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/oldpass"
                    android:inputType="text"
                    android:textSize="@dimen/_10sdp" />

                <EditText
                    android:id="@+id/newpass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/newpass"
                    android:inputType="textPassword"
                    android:textSize="@dimen/_10sdp" />

                <EditText
                    android:id="@+id/confpass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/confpass"
                    android:inputType="textPassword"
                    android:textSize="@dimen/_10sdp" />

                <Button
                    android:id="@+id/buttonChangeUser"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_marginVertical="@dimen/_20sdp"
                    android:background="#f16521"
                    android:text="@string/change_estab_info"
                    android:textColor="#fff"
                    android:textSize="@dimen/_8sdp" />

            </TableLayout>


        </ScrollView>

    </com.google.android.flexbox.FlexboxLayout>

</android.support.constraint.ConstraintLayout>
