<com.google.android.flexbox.FlexboxLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".EstablishmentRegister"
    android:layout_width="match_parent"
    android:layout_height="100dp">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/logo"
        android:layout_marginBottom="40dp"
        app:srcCompat="@drawable/foodback_logo"
        app:layout_alignSelf="center"/>

</com.google.android.flexbox.FlexboxLayout>

<com.google.android.flexbox.FlexboxLayout
        android:layout_width="match_parent"
        android:layout_height="500dp">

        <Button
            android:id="@+id/restaurant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="500dp"
            android:background="#f16521"
            android:padding="10dp"
            android:text="@string/restaurant"
            android:textColor="#fff"
            android:textSize="14sp" />

        <Button
            android:id="@+id/bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="90dp"
            android:background="#f16521"
            android:padding="10dp"
            android:text="@string/bar"
            android:textColor="#fff"
            android:textSize="14sp" />

        <Button
            android:id="@+id/coffe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="90dp"
            android:background="#f16521"
            android:padding="10dp"
            android:text="@string/coffe"
            android:textColor="#fff"
            android:textSize="14sp" />

        <Button
            android:id="@+id/dessert"
            android:layout_width="123dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="90dp"
            android:background="#f16521"
            android:padding="10dp"
            android:text="@string/dessert"
            android:textColor="#fff"
            android:textSize="14sp" />
</com.google.android.flexbox.FlexboxLayout>


